--- a/assets/stylesheets/base/_reset.scss
+++ b/assets/stylesheets/base/_reset.scss
@@ -12,8 +12,7 @@
  */
 html { 
   box-sizing: border-box; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+  text-size-adjust: 100%; /* 2 */
 }
 
 /**
