Added Gulpfile setup

--- a/views/layouts/index.html
+++ b/views/layouts/index.html
@@ -18,12 +18,13 @@
           // Font storage name
           'az-fonts',
           // WOFF URL
-          '/assets/stylesheets/fonts/data-woff.css',
+          '/client/stylesheets/fonts/data-woff.css',
           // WOFF2 URL
-          '/assets/stylesheets/fonts/data-woff2.css'
+          '/client/stylesheets/fonts/data-woff2.css'
         );
       })(window);
     </script>
+    <link rel="stylesheet" href="/client/stylesheets/app.css" />
     {% block head %}{% endblock %}
   </head>
 
