--- a/views/components/sample/stylesheets/utilities/_variables.scss
+++ b/views/components/sample/stylesheets/utilities/_variables.scss
@@ -1,3 +1,3 @@
-/// Baseline for component
-/// @type Length
-$my-component-variable: 42px;
+/// Breakpoint for component
+/// @type Map
+$my-custom-breakpoint: 'height>550px';
