--- a/views/layouts/styleguide.html
+++ b/views/layouts/styleguide.html
@@ -1,8 +1,6 @@
-{% extends "views/layouts/index.html" %}
+{% extends "views/index.html" %}
 
-{% block content %}
-  {{ content }}
-{% endblock %}
+{% block content %}{{ content }}{% endblock %}
 
 {% block title %}
   {{ title }}
