--- a/views/index.html
+++ b/views/index.html
@@ -2,12 +2,12 @@
 <html lang="de-ch">
   <head>
     <meta charset="UTF-8" />
-    <title>{% block title %}AZ{% endblock %}</title>
+    <title>{% block title %}{{ title }}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {# Inline the JavaScript utilities file since it needs to be synchronously
        loaded. Also, it is very lightweight so it should not make any difference. #}
     <script>
-      {% include "assets/javascripts/utilities.js" %}
+      {% include "assets/javascripts/webfont-loading.js" %}
     </script>
 
     {# Asynchronously request the font-face stylesheet based on the WOFF support,
@@ -24,12 +24,12 @@
         );
       })(window);
     </script>
-    <link rel="stylesheet" href="/client/stylesheets/app.css" />
+    <link rel="stylesheet" href="/client/stylesheets/styles.css" />
     {% block head %}{% endblock %}
   </head>
 
   <body>
     <main id="app">{% block content %}{% endblock %}</main>
-    <script src="client/browser.js"></script>
+    <script src="/client/frontend.bundled.js"></script>
   </body>
 </html>
