get font files copying to build folder

--- a/views/index.html
+++ b/views/index.html
@@ -18,13 +18,13 @@
           // Font storage name
           'az-fonts',
           // WOFF URL
-          '/client/stylesheets/fonts/data-woff.css',
+          '/client/fonts/data-woff.css',
           // WOFF2 URL
-          '/client/stylesheets/fonts/data-woff2.css'
+          '/client/fonts/data-woff2.css'
         );
       })(window);
     </script>
-    <link rel="stylesheet" href="/client/stylesheets/styles.css" />
+    <link rel="stylesheet" href="/client/styles.css" />
     {% block head %}{% endblock %}
   </head>
 
