--- a/assets/fonts/data-woff.css
+++ b/assets/fonts/data-woff.css
@@ -1,13 +1,13 @@
 @font-face {
-  font-family: 'My Custom Font';
-  src: url('data:application/x-font-woff;charset=utf-8;base64,...') format('woff');
+  font-family: 'HelveticaNeue';
+  src: url('HelveticaNeueRegular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'My Custom Font';
-  src: url('data:application/x-font-woff;charset=utf-8;base64,...') format('woff');
+  font-family: 'HelveticaNeue';
+  src: url('HelveticaNeueBold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
 }
