get linting working, with colours

--- a/views/index.html
+++ b/views/index.html
@@ -18,9 +18,9 @@
           // Font storage name
           'az-fonts',
           // WOFF URL
-          '/client/fonts/data-woff.css',
+          '/client/data-woff.css',
           // WOFF2 URL
-          '/client/fonts/data-woff2.css'
+          '/client/data-woff2.css'
         );
       })(window);
     </script>
