Fixed the Gulp-powered Sass compilation process

--- a/views/components/sample/stylesheets/main.scss
+++ b/views/components/sample/stylesheets/main.scss
@@ -1,5 +1,5 @@
-// Import component-specific variables
-@import 'sample/stylesheets/utilities/variables';
+@import 'globals';
+@import 'utilities/variables';
 
 .sample {
   @include media('≥400px', $my-custom-breakpoint, 'retina') {
