Added fallback fonts in font stacks

--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -28,8 +28,8 @@ $media-expressions: (
 
 /// Default font stack
 /// @type List
-$text-font-stack: 'Publico', serif;
+$text-font-stack: 'Publico', 'Georgia', serif;
 
 /// Heading font stack
 /// @type List
-$heading-font-stack: 'Publico Headline', sans-serif;
+$headline-font-stack: 'Publico Headline', 'Times New Roman', serif;
