--- a/app/assets/fonts/data-woff.css
+++ b/app/assets/fonts/data-woff.css
@@ -25,3 +25,17 @@
   font-weight: 700;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Colfax';
+  src: url('ColfaxWebRegular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Colfax';
+  src: url('ColfaxWebBold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
