--- a/app/assets/fonts/data-woff2.css
+++ b/app/assets/fonts/data-woff2.css
@@ -25,3 +25,17 @@
   font-weight: 700;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Colfax';
+  src: url('ColfaxWebRegular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Colfax';
+  src: url('ColfaxWebBold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
