Added project wide color variables

--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -40,3 +40,43 @@ $headline-font-stack: 'Publico Headline', 'Times New Roman', serif;
 /// @type List
 /// @group typography
 $supporting-font-stack: 'Colfax', 'Helvetica', 'Arial', sans-serif;
+
+/// Blue
+/// @type Color
+$blue: #1B4D85;
+
+/// Baby blue
+/// @type Color
+$baby-blue: #4781C2;
+
+/// Navy blue
+/// @type Color
+$navy-blue: #0B0A3B;
+
+/// Black
+/// @type Color
+$black: #050515;
+
+/// Orange
+/// @type Color
+$orange: #F56200;
+
+/// Yellow
+/// @type Color
+$yellow: #FEEF75;
+
+/// Dark grey
+/// @type Color
+$dark-grey: #666666;
+
+/// Medium grey
+/// @type Color
+$medium-grey: #7A7A7A;
+
+/// Light grey
+/// @type Color
+$light-grey: #EDEDED;
+
+/// Very light grey
+/// @type Color
+$very-light-grey: #F9F9F9;
