Applied basic styles to the styleguide

--- a/app/assets/styles/base/base.scss
+++ b/app/assets/styles/base/base.scss
@@ -2,6 +2,15 @@
 
 body {
   font: 125% / 1.4 $text-font-stack;
+  color: $black;
+
+  @include media('>=small') {
+    height: 100vh;
+  }
+
+  > div {
+    height: 100%;
+  }
 }
 
 h1 {
