--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -5,6 +5,8 @@
 /// Introduction paragraph
 /// This is intended to be an introduction paragraph to an article. It should not
 /// be used for more than a single paragraph in a row.
+/// @example markup
+///   <p class='type-intro'>Vier Tage lang haben drei Schneeschuhwanderer aus Tschechien im Salzburger Pinzgau im Winterraum einer Hütte in 2100 Metern Seehöhe ausgeharrt, weil sie nach einem massiven Wetterumschwung nicht mehr absteigen konnten.</p>
 @mixin type-intro {
   font: 24px / 1.41 $supporting-font-stack;
   font-weight: 700;
@@ -15,6 +17,8 @@
 /// Copy text
 /// This is intended to be the default typographic styles for paragraphs, lists
 /// and basically the core content of an article.
+/// @example markup
+///  <p class='type-copy'>Die Männer seien am vergangen Freitagmorgen zu der Tour aufgebrochen, die sie zum Ingolstädterhaus auf 2119 Meter führen sollte, teilte die Polizei mit. Gegen 23.00 Uhr erreichten sie die im Winter nicht bewirtschaftete Hütte und quartierten sich im Winterraum ein, der frei zugänglich ist, über zwölf Schlafplätze, aber keine Verpflegung verfügt.</p>
 @mixin type-copy {
   font: 22px / 1.41 $text-font-stack;
   letter-spacing: 0.3px;
@@ -24,6 +28,8 @@
 /// Alternate copy text
 /// Type copy-alternate
 /// @todo To be determined.
+/// @example markup
+///  <p class='type-copy-alternate'>Die Redaktion sucht nach Augenzeugen, die am vergangenen Dienstag den Unfall am Marktplatz in Aarau beobachet haben. Ein schwarzer Mercedes war an einen Poller geprallt und hatte sich überschlagen, 2 Passanten wurden leicht verletzt.</p>
 @mixin type-copy-alternate {
   font: 22px / 1.41 $supporting-font-stack;
 }
@@ -31,6 +37,8 @@
 
 /// Primary headline
 /// This is intended to be used for the main headline, such as article's.
+/// @example markup
+///  <h1 class='type-h1'>Staatsanwaltschaft ermittelt nach Brückeneinsturz gegen Unbekannt</h1>
 @mixin type-h1 {
   font: 48px / 1.125 $headline-font-stack;
   letter-spacing: 0.9px;
@@ -39,6 +47,8 @@
 
 /// Secondary headline
 /// This is intended to be used when `type-h1` is a bit too *in yo' face*.
+/// @example markup
+///  <h2 class='type-h2'>Staatsanwaltschaft ermittelt nach Brückeneinsturz gegen Unbekannt</h2>
 @mixin type-h2 {
   font: 32px / 1.25 $headline-font-stack;
   letter-spacing: 0.6px;
@@ -47,6 +57,8 @@
 
 /// Tertiary headline
 /// This is intended to be used when `type-h2` is a bit too *in yo' face*.
+/// @example markup
+///  <h3 class='type-h3'>Staatsanwaltschaft ermittelt nach Brückeneinsturz gegen Unbekannt</h3>
 @mixin type-h3 {
   font: 24px / 1.25 $headline-font-stack;
   letter-spacing: 0.6px;
@@ -56,6 +68,8 @@
 /// Mini headline
 /// This is intended to style titles that are part of secondary content, for 
 /// instance related content within an article.
+/// @example markup
+///  <h4 class='type-h4'>Staatsanwaltschaft ermittelt nach Brückeneinsturz gegen Unbekannt</h4>
 @mixin type-h4 {
   font: 18px / 1.3333 $headline-font-stack;
   letter-spacing: 0.6px;
@@ -64,6 +78,8 @@
 
 /// Blockquote
 /// This is intended to style blockquotes. It should not be used on inline quotes.
+/// @example markup
+///  <blockquote class='type-blockquote'>«Am Sonntag wurden die Tschechen im Alter von 32, 35 und 38 Jahren dann vom Wetterumschwung überrascht»</blockquote>
 @mixin type-blockquote {
   font: 32px / 1.1875 $headline-font-stack;
   letter-spacing: 0.6px;
@@ -72,6 +88,8 @@
 
 /// Caption
 /// This is intended to be used for captions such as under an image or video.
+/// @example markep
+///  <p class='type-caption'>Zunzger Kinder im Fasnachtsfieber</p>
 @mixin type-caption {
   font: 16px / 1.375 $supporting-font-stack;
   letter-spacing: 0.2px;
@@ -82,6 +100,8 @@
 /// Detail information
 /// This is intended to be used for tiny details, such as secondary labels
 /// or meta data on articles like the author name or the date.
+/// @example markup
+///  <p class='type-detail'>Abonnieren</p>
 @mixin type-detail {
   font: 12px / 1.3333 $supporting-font-stack;
   letter-spacing: 0.1px;
@@ -93,6 +113,8 @@
 /// This is intended to be a word, phrase or name to give context to an article 
 /// or a quote.
 /// @see {mixin} type-blockquote
+/// @example markup
+///  <p class='type-tiny-header'>DEUTSCHLAND</p>
 @mixin type-tiny-header {
   font: 13px / 1.23 $supporting-font-stack;
   text-transform: uppercase;
