--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -39,52 +39,72 @@ $code-font-stack: 'Consolas', 'Monaco', 'Courier New', monospace;
 // -----------------------------------------------------------------------------
 
 
-/// Blue
+/// AZ blue from primary palette
+/// AZ Blue is used in the logo and navigation.
+/// @group colors
 /// @type Color
 $blue: #1B4D85;
 
 
-/// Baby blue
+/// Light blue from primary palette
+/// Light blue is used to indicate links.
+/// @group colors
 /// @type Color
 $baby-blue: #4781C2;
 
 
-/// Navy blue
+/// Navy blue from primary palette
+/// This colour is used for all of the text content on the site, instead of black.
+/// @group colors
 /// @type Color
 $navy-blue: #0B0A3B;
 
 
-/// Black
+/// Black from secondary palette
+/// Black is used for emphasis in text.
+/// @group colors
 /// @type Color
 $black: #050515;
 
 
-/// Orange
+/// Orange from secondary palette
+/// Orange is used for breaking news items and should be used sparingly.
+/// @group colors
 /// @type Color
 $orange: #F56200;
 
 
-/// Yellow
+/// Yellow from secondary palette
+/// Yellow is used for subtle highlights & drawing attention to certain section and should be used sparingly.
+/// @group colors
 /// @type Color
 $yellow: #FEEF75;
 
 
-/// Dark grey
+/// Dark grey from grey palette
+/// Dark grey is for contextual tags, quotes, captions and other small details.
+/// @group colors
 /// @type Color
 $dark-grey: #666666;
 
 
-/// Medium grey
+/// Medium grey from grey palette
+/// Medium grey is for backgrounds that need to stand out.
+/// @group colors
 /// @type Color
 $medium-grey: #7A7A7A;
 
 
-/// Light grey
+/// Light grey from grey palette
+/// Light grey is used to infer subtle backgrounds on pieces of content.
+/// @group colors
 /// @type Color
 $light-grey: #EDEDED;
 
 
-/// Very light grey
+/// Very light grey from grey palette
+/// Light grey is used to infer subtle backgrounds on pieces of content.
+/// @group colors
 /// @type Color
 $very-light-grey: #F9F9F9;
 
