--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -36,21 +36,23 @@ $code-font-stack: 'Consolas', 'Monaco', 'Courier New', monospace;
 
 // -----------------------------------------------------------------------------
 // COLORS
+// /!\ Caution! The *... from ... palette* on each color is the color name and
+//     the palette it belongs to in the styleguide. Do not change the format.
 // -----------------------------------------------------------------------------
 
 
 /// AZ blue from primary palette
-/// AZ Blue is used in the logo and navigation.
+/// This colour is used in the logo and navigation.
 /// @group colors
 /// @type Color
 $blue: #1B4D85;
 
 
 /// Light blue from primary palette
-/// Light blue is used to indicate links.
+/// This colour is used to indicate links.
 /// @group colors
 /// @type Color
-$baby-blue: #4781C2;
+$light-blue: #4781C2;
 
 
 /// Navy blue from primary palette
@@ -61,49 +63,49 @@ $navy-blue: #0B0A3B;
 
 
 /// Black from secondary palette
-/// Black is used for emphasis in text.
+/// This colour is used for emphasis in text.
 /// @group colors
 /// @type Color
 $black: #050515;
 
 
 /// Orange from secondary palette
-/// Orange is used for breaking news items and should be used sparingly.
+/// This colour is used for breaking news items and should be used sparingly.
 /// @group colors
 /// @type Color
 $orange: #F56200;
 
 
 /// Yellow from secondary palette
-/// Yellow is used for subtle highlights & drawing attention to certain section and should be used sparingly.
+/// This colour is used for subtle highlights & drawing attention to certain section and should be used sparingly.
 /// @group colors
 /// @type Color
 $yellow: #FEEF75;
 
 
 /// Dark grey from grey palette
-/// Dark grey is for contextual tags, quotes, captions and other small details.
+/// This colour is for contextual tags, quotes, captions and other small details.
 /// @group colors
 /// @type Color
 $dark-grey: #666666;
 
 
 /// Medium grey from grey palette
-/// Medium grey is for backgrounds that need to stand out.
+/// This colour is for backgrounds that need to stand out.
 /// @group colors
 /// @type Color
 $medium-grey: #7A7A7A;
 
 
 /// Light grey from grey palette
-/// Light grey is used to infer subtle backgrounds on pieces of content.
+/// This colour is used to infer subtle backgrounds on pieces of content.
 /// @group colors
 /// @type Color
 $light-grey: #EDEDED;
 
 
 /// Very light grey from grey palette
-/// Light grey is used to infer subtle backgrounds on pieces of content.
+/// This colour is used to infer subtle backgrounds on pieces of content.
 /// @group colors
 /// @type Color
 $very-light-grey: #F9F9F9;
