Improved the styleguide look and feel

--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -59,6 +59,10 @@
 @mixin type-h2 {
   font: 32px / 1.25 $headline-font-stack;
   letter-spacing: 0.6px;
+
+  @include media('≤small') {
+    font-size: 22px;
+  }
 }
 
 
@@ -68,6 +72,10 @@
 @mixin type-h3 {
   font: 24px / 1.25 $headline-font-stack;
   letter-spacing: 0.6px;
+
+  @include media('≤small') {
+    font-size: 18px;
+  }
 }
 
 
