--- a/app/layouts/styleguide.html
+++ b/app/layouts/styleguide.html
@@ -1,3 +1,7 @@
 {% extends "app/index.html" %}
 
 {% block content %}{{ content }}{% endblock %}
+
+{% block scripts %}
+  <script src="/client/scripts/vendor/prism.min.js"></script>
+{% endblock %}
