--- a/app/assets/styles/base/base.scss
+++ b/app/assets/styles/base/base.scss
@@ -11,7 +11,6 @@ code {
 
 table {
   text-align: left;
-  margin: 10px 0;
 
   @include media('>small') {
     width: 100%;
@@ -28,5 +27,5 @@ th {
 }
 
 td, th {
-  padding: 5px;
+  padding: 5px 20px 5px 0;
 }
