--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -36,8 +36,22 @@
 /// @example markup - Alternate copy text
 ///  <p class='type-copy-alternate'>Die Redaktion sucht nach Augenzeugen, die am vergangenen Dienstag den Unfall am Marktplatz in Aarau beobachet haben. Ein schwarzer Mercedes war an einen Poller geprallt und hatte sich überschlagen, 2 Passanten wurden leicht verletzt.</p>
 @mixin type-copy-alternate {
-  font: 22px / 1.41 $supporting-font-stack;
+  font: 16px / 1.5 $supporting-font-stack;
+
+  @include media('≤small') {
+    font-size: 15px;
+  }
 }
+
+/// Alternate headline text.
+/// @todo To be determined.
+/// @example markup - Alternate copy text
+///  <h2 class='type-headline-alternate'>Die Redaktion sucht nach Augenzeugen, die am vergangenen Dienstag den Unfall am Marktplatz in Aarau beobachet haben. Ein schwarzer Mercedes war an einen Poller geprallt und hatte sich überschlagen, 2 Passanten wurden leicht verletzt.</h2>
+@mixin type-headline-alternate {
+  font: 18px / 1.333 $supporting-font-stack;
+  font-weight: 700;
+}
+
 
 
 /// This is intended to be used for the main headline, such as article's.
