Renamed “tiny-header” into “catchword”

--- a/app/assets/styles/base/helpers.scss
+++ b/app/assets/styles/base/helpers.scss
@@ -32,8 +32,8 @@
   @include type-h4;
 }
 
-.type-tiny-header {
-  @include type-tiny-header;
+.type-catchword {
+  @include type-catchword;
 }
 
 .type-blockquote {
