--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -138,9 +138,9 @@
 /// This is intended to be a word, phrase or name to give context to an article
 /// or a quote.
 /// @see {mixin} type-blockquote
-/// @example markup - Tiny header
-///  <p class='type-tiny-header'>DEUTSCHLAND</p>
-@mixin type-tiny-header {
+/// @example markup - Catchword
+///  <p class='type-catchword'>DEUTSCHLAND</p>
+@mixin type-catchword {
   font: 13px / 1.23 $supporting-font-stack;
   text-transform: uppercase;
   font-weight: 700;
