--- a/app/assets/styles/base/helpers.scss
+++ b/app/assets/styles/base/helpers.scss
@@ -47,3 +47,10 @@
 .type-detail {
   @include type-detail;
 }
+
+.hidden-text {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 0;
+}
