--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -75,6 +75,7 @@
 @mixin type-h2 {
   font: 32px / 1.25 $headline-font-stack;
   letter-spacing: 0.6px;
+  margin-bottom: 15px;
 
   @include media('≤small') {
     font-size: 22px;
@@ -88,6 +89,7 @@
 @mixin type-h3 {
   font: 24px / 1.25 $headline-font-stack;
   letter-spacing: 0.6px;
+  margin-bottom: 15px;
 
   @include media('≤small') {
     font-size: 18px;
