update medium grey colour value

--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -99,7 +99,7 @@ $dark-grey: #666666;
 /// This colour is for backgrounds that need to stand out.
 /// @group colors
 /// @type Color
-$medium-grey: #7A7A7A;
+$medium-grey: #888888;
 
 
 /// Light grey from grey palette
