Created a full article page preview

--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -161,4 +161,9 @@ $container-spacing: 18px;
 /// Container width expressed in pixels
 /// @type Length
 /// @group container
-$container-width: 800px;
+$container-width: 1180px;
+
+/// Sidebar width expressed in pixels
+/// @type Length
+/// @group container
+$sidebar-width: 350px;
