--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -167,3 +167,6 @@ $container-width: 1180px;
 /// @type Length
 /// @group container
 $sidebar-width: 350px;
+
+/// Main width
+$main-width: calc(100% - #{$sidebar-width});
